# clair

./: .clang-tidy  .gitignore  .mailmap  CMakeLists.txt  ChangeLog.md  ClairConfig.cmake.in  Dockerfile.build  Jenkinsfile  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml
doc/: C2pyMagicDemo.ipynb  C2pyMagicDemo_nda.ipynb  CMakeLists.txt  ChangeLog.md  about.rst  api.cpp  cmake.rst  conf.py.in  gettingstarted.rst  index.rst  install.rst  install_packages.rst  install_src.rst  notebook.rst  pyg.bash  reference.rst
doc/_templates/: sideb.html
doc/examples/: .clang-format  compile.bash  config_dispatch.cpp  config_misc.cpp  config_using.cpp  fail.cpp  filter.cpp  fun1.cpp  fun2.cpp  gs1.cpp  struct1.cpp
doc/examples/cmake1/: CMakeLists.txt  my_module.cpp
doc/examples/cmake2/: CMakeLists.txt  my_module.cpp
doc/examples/cmake3/: CMakeLists.txt  my_module.cpp
doc/notebooks/: C2pyMagicDemo.ipynb
doc/reference/: api.rst  config.rst  customize.rst  enums.rst  fnt_basic.rst
docs/: index.html
docs/unstable/: .buildinfo  ChangeLog.html  about.html  cmake.html  examples.html  genindex.html  gettingstarted.html  index.html  install.html  install_packages.html  install_src.html  issues.html  notebook.html  objects.inv  reference.html  search.html  searchindex.js
docs/unstable/.doctrees/: ChangeLog.doctree  about.doctree  cmake.doctree  environment.pickle  examples.doctree  gettingstarted.doctree  index.doctree  install.doctree  install_packages.doctree  install_src.doctree  issues.doctree  notebook.doctree  reference.doctree
docs/unstable/.doctrees/reference/: api.doctree  classes.doctree  converters.doctree  customize.doctree  enums.doctree  fnt_basic.doctree
docs/unstable/_sources/: cmake.rst.txt  examples.rst.txt  gettingstarted.rst.txt  index.rst.txt  install.rst.txt  install_packages.rst.txt  install_src.rst.txt  issues.rst.txt  notebook.rst.txt
docs/unstable/_sources/reference/: classes.rst.txt  converters.rst.txt  customize.rst.txt  fnt_basic.rst.txt
docs/unstable/_static/: clipboard.min.js
docs/unstable/reference/: api.html  classes.html  converters.html  customize.html  enums.html  fnt_basic.html
packaging/: Dockerfile.sanitize  Dockerfile.ubuntu-clang
python/clair/: CMakeLists.txt  __init__.py
share/: CMakeLists.txt  clair.modulefile.in  clairvars.sh.in
share/cmake/: CMakeLists.txt  clair-config-version.cmake.in  clair-config.cmake.in  run_test.cmake
share/cmake/Modules/: clang_detection.cmake
src/: CMakeLists.txt  libcpp_check.cpp
src/clu/: CMakeLists.txt  cmd_line_arg.cpp  cmd_line_arg.hpp  compile.cpp  compile.hpp  concept.cpp  concept.hpp  doc_string.cpp  doc_string.hpp  fullqualifiedname.cpp  fullqualifiedname.hpp  misc.cpp  misc.hpp
src/itertools/: itertools.hpp
src/plugins/: CMakeLists.txt
src/plugins/c2py/: CMakeLists.txt  ast_consumer.cpp  ast_consumer.hpp  c2py_version.hpp  clang_format_config.hpp  data.cpp  data.hpp  matchers.cpp  matchers.hpp  plugin.cpp  worker.cpp  worker.hpp
src/plugins/c2py/codegen/: classes.cpp  classes.hpp  doc.cpp  doc.hpp  fnt.cpp  fnt.hpp  module.cpp  module.hpp
src/plugins/c2py/python/: CMakeLists.txt  c2py_magic.py  compiler.py
src/tools/: CMakeLists.txt
src/tools/annotate_fnt/: CMakeLists.txt  action.hpp  ast_consumer.cpp  matchers.cpp  matchers.hpp  worker.cpp  worker.hpp
src/tools/parent2bracket/: CMakeLists.txt  action.hpp  ast_consumer.cpp  ast_consumer.hpp  config.hpp  main.cpp  matchers.cpp  matchers.hpp
src/utility/: logger.hpp  macros.hpp  pushd_guard.hpp  stl_complement.hpp  string_tools.hpp
test/: CMakeLists.txt  nda1.cpp  nda1_test.py
